components/menu/src/styles/default/style-menu.scss
// Copyright (c) 2021 Alaska Airlines. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

/* stylelint-disable declaration-empty-line-before, selector-max-class */

// Import Auro tokens
@use '@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables' as vac;
@use '@aurodesignsystem/webcorestylesheets/src/core';
@use '@aurodesignsystem/webcorestylesheets/dist/bundled/type/classes.alaska.css';

/* stylelint-disable declaration-no-important, order/properties-order, selector-max-attribute, selector-max-combinators, selector-max-compound-selectors, selector-no-qualifying-type, scss/selector-nest-combinators, max-nesting-depth */

// container styles - defines the look of the outer custom component
:host {
  display: block;
  vertical-align: middle;
  line-height: 0; // prevents page from jumping when menu options are selected at the end of the list.

  .menuWrapper {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    width: 100%;

    margin: 0;
    padding: 0;
  }

  // Styles are set to `important` to ensure they over-ride any styles
  // set in the user's global scope.
  ::slotted(hr) {
    box-sizing: content-box !important;
    height: 0 !important;

    overflow: visible !important;

    margin: var(--ds-size-100, vac.$ds-size-100) 0 !important;

    border-width: 0 !important;
    border-top-width: 1px !important;
    border-top-style: solid !important;
  }

  [loadingplaceholder] {
    &.empty {
      opacity: 0;
      position: absolute;
    }

    slot[name="loadingIcon"] {
      vertical-align: middle;
      display: inline-block;
      margin-bottom: var(--ds-size-25, vac.$ds-size-25);

      &::slotted(*) {
        margin-right: var(--ds-size-150, vac.$ds-size-150);
      }
    }
  }
}

:host([root]) { 
  overflow-y: auto;

  .menuWrapper {
    &.lg {
      padding: var(--ds-size-150, vac.$ds-size-150);
      gap: var(--ds-size-50, vac.$ds-size-50);
    }

    &.xl {
      padding: var(--ds-size-200, vac.$ds-size-200);
      gap: var(--ds-size-100, vac.$ds-size-100);
    }
  }
}

